--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="btn" onclick="plus3H()">+3</button>
       </div>
       <div class="guest">
-        <h3 class="title guest-title">Away</h3>
+        <h3 class="title guest-title">AWAY</h3>
         <div class="input" id="countG">0</div>
         <button class="btn" onclick="plus1G()">+1</button>
         <button class="btn" onclick="plus2G()">+2</button>
